Fix build issues: gradlew, settings typo, gradle.properties, VPS setup scripts, nginx panel, README
Agent-Logs-Url: https://github.com/bitbybit91/app-builder/sessions/f3e48658-b022-4e60-941d-96474fa4da96

Co-authored-by: bitbybit91 <141915749+bitbybit91@users.noreply.github.com>